# CollectionManager

./: .gitignore  README.md  pytest.ini  requirements.txt
docs/: exceptions.md  test.md
rust/collection_manager_rust_parser/: Cargo.toml
rust/collection_manager_rust_parser/src/: lib.rs
src/CollectionManager/app/: bootstrap.py  dependency.py  logger.py  main.py
src/CollectionManager/domain/: __init__.py  exceptions.py
src/CollectionManager/domain/model/: __init__.py  beatmap.py  collection.py
src/CollectionManager/domain/service/: __init__.py  collection_service.py  import_service.py  search_service.py
src/CollectionManager/infrastructure/: __init__.py
src/CollectionManager/infrastructure/exceptions/: fs.py  parser.py  repository.py
src/CollectionManager/infrastructure/fs/: __init__.py  bm_installer.py  osz_extractor.py
src/CollectionManager/infrastructure/osu/: __init__.py  _rust_backend.py  bm_decoder.py  collection_db_parser.py  collection_db_writer.py  data_types.py  mapper.py  osu_db_parser.py
src/CollectionManager/infrastructure/storage/: __init__.py  models.py  sqlite_db.py
src/CollectionManager/ui/: __init__.py  exceptions.py  i18n.py  startup.py  viewmodels.py  widgets.py  windows.py
test/regression/: conftest.py  test_collection_import_export_regression.py  test_collection_picker_regression.py  test_collection_service_regression.py  test_osz_import_regression.py  test_startup_real_fixture_slow.py
test/test_data/osu/: collection.db
test/test_data/osz_example/: suggestion.txt
(+3 files in other folders)
