[package]
name = "collection_manager_rust_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "collection_manager_rust_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py39", "extension-module"] }
pythonize = "0.23"
serde = { version = "1", features = ["derive"] }
